# vaca_fala

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  utils.py  utils_test.py  vacaservice.py  vacaweb.py  views.py
static/: style.css
templates/: principal.html  upvaca.html
