[tool.poetry]
name = "vacaweb"
version = "0.0.1"
description = "Implementação web cowsay"
authors = ["ederson <eder.hu@outlook.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "0.4.5"
itsdangerous = "2.1.2"
MarkupSafe = "2.1.1"
click = "8.1.3"
Flask = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
vaca-fala = "vacaweb:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
